added output and callback functions, fixed bugs and types with HTML and JavaScript

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Cookie Settings</p>
         <label><input type="checkbox" id="browserToggle" checked>Browser Name</label><br>
         <label><input type="checkbox" id="osToggle" checked>OS Name</label><br>
-        <label><input type="checkbox" id="screenrToggle" checked>Screeb Suze</label><br>
+        <label><input type="checkbox" id="screenToggle" checked>Screen Size</label><br>
         <input type="button" id="save" value="Save">
       </dialog>
     </main>
